--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Grow My Contacts</title>
+    <title>Faster Fast People Search</title>
     <meta charset="utf-8">
   </head>
   <body>
@@ -12,7 +12,7 @@
       </fieldset>
       <fieldset>
         <label for="farmName">Farm Name: </label>
-        <input name="farmtName" type="text" required>
+        <input name="farmName" type="text" required>
       </fieldset>
       <fieldset>
         <label for="farmFile">Farm File</label>
