--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <h1>Faster FastPeopleSearch</h1>
     <form id="csvForm">
       <fieldset>
         <label for="agentName">Your Name: </label>
