--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Faster FastPeopleSearch</h1>
+    <p>First Time? Check out a <a href="https://www.youtube.com/watch?v=8f_TsxosKq8" target="_blank">video demo</a></p>
     <form id="csvForm">
       <fieldset>
         <label for="farmName">Farm Name: </label>
