--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Faster Fast People Search</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Faster FastPeopleSearch</h1>
