--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <p>First Time? Check out a <a href="https://www.youtube.com/watch?v=8f_TsxosKq8" target="_blank">video demo</a></p>
     <form id="csvForm">
       <fieldset>
+        <label for="fileSource">File Source:</label>
+        <select name="fileSource">
+          <option value="Fidelity Total Farm">Fidelity Total Farm</option>
+          <option value="Propwire">Propwire</option>
+          <option value="ReboGateway">ReboGateway</option>
+        </select>
+      </fieldset>
+      <fieldset>
         <label for="farmName">Farm Name: </label>
         <input name="farmName" type="text" required>
       </fieldset>
@@ -24,6 +32,6 @@
     </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="app.js"></script>
+    <script src="client.js"></script>
   </body>
 </html>
