--- a/index.html
+++ b/index.html
@@ -6,32 +6,54 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Faster FastPeopleSearch</h1>
-    <p>First Time? Check out a <a href="https://www.youtube.com/watch?v=8f_TsxosKq8" target="_blank">video demo</a></p>
-    <form id="csvForm">
-      <fieldset>
-        <label for="fileSource">File Source:</label>
-        <select name="fileSource">
-          <option value="Fidelity Total Farm">Fidelity Total Farm</option>
-          <option value="Propwire">Propwire</option>
-          <option value="ReboGateway">ReboGateway</option>
-        </select>
-      </fieldset>
-      <fieldset>
-        <label for="farmName">Farm Name: </label>
-        <input name="farmName" type="text" required>
-      </fieldset>
-      <fieldset>
-        <label for="farmFile">Farm File</label>
-        <input name="farmFile" type="file" accept=".csv" required>
-      </fieldset>
-      <fieldset>
-        <button type="submit">Generate Farm File</button>
-        <button type="button">Clear</button>
-      </fieldset>
-    </form>
+    <header>
+      <nav>
+        <h1>Farm Friend</h1>
+        <ul>
+          <li>Faster FastPeopleSearch</li>
+          <li>QR Coded <small>In Development</small></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Faster FastPeopleSearch</h1>
+      <p>First Time? Check out a <a href="https://www.youtube.com/watch?v=iprJNND0Jls" target="_blank">video demo</a></p>
+      <form id="csv-form">
+        <fieldset>
+          <label for="farm-name">Farm Name: </label>
+          <input name="farm-name" type="text" placeholder="Anything goes..." required>
+        </fieldset>
+        <fieldset id="farm-file-fieldset">
+          <label for="farm-file">Farm File</label>
+          <input name="farm-file" type="file" accept=".csv" required>
+        </fieldset>
+        <fieldset id="tags-fieldset">
+          <label for="checkbox">Looking to apply tags?</label>
+          <button type="button" id="apply-tags-button">Create</button>
+        </fieldset>
+        <fieldset>
+          <button type="submit" id="generate">Generate Farm File</button>
+          <button type="button" id="clear">Clear</button>
+        </fieldset>
+      </form>
+    </main>
+    <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="client.js"></script>
+    <script type="text/x-handlebars-template" id="tags_template">
+      <div id="tag-creation-container">
+        <input type="text" id="tags" name="tags" placeholder="Empty Nesters, Free & Clear, RPV, ...">
+        <div id="tags-container"></div>
+      </div>
+    </script>
+    <script type="text/x-handlebars-template" id="tag-template">
+      <span class="tag">{{currentTag}}</span><span class="remove-tag">x</span>
+    </script>
+    <script type="text/x-handlebars-template" id="filetype-error-template">
+      <small id="filetype-error">The chosen file is not a supported file type.  Please import a file from Fidelity Total Farm or Propwire</small>
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script type="module" src="client.js"></script>
   </body>
 </html>
